add master weapons and riding trainer to guildhouse, update vas, update item levelup, fix transmog conflict with weapon visual remove duplicate

--- a/mod-vas-autobalance/.travis.yml
+++ b/mod-vas-autobalance/.travis.yml
@@ -1,5 +1,6 @@
 sudo: required
-dist: bionic # (18.04)
+dist: xenial # (16.04)
+# bionic (18.04) is not yet available in travis
 
 language: cpp
 
@@ -26,7 +27,6 @@ jobs:
       before_install:
         - cd ..
         - git clone --depth=1 --branch=master https://github.com/azerothcore/azerothcore-wotlk.git azerothcore-wotlk
-        - mv "$TRAVIS_BUILD_DIR" azerothcore-wotlk/modules
         - cd azerothcore-wotlk
         - source ./apps/ci/ci-before_install.sh
       install:
@@ -54,7 +54,6 @@ jobs:
       before_install:
         - cd ..
         - git clone --depth=1 --branch=master https://github.com/azerothcore/azerothcore-wotlk.git azerothcore-wotlk
-        - mv "$TRAVIS_BUILD_DIR" azerothcore-wotlk/modules
         - cd azerothcore-wotlk
         - source ./apps/ci/ci-before_install.sh
       install:
