--- a/mod-guildhouse-Patch/conf/mod_guild_house_v2.conf.dist
+++ b/mod-guildhouse-Patch/conf/mod_guild_house_v2.conf.dist
@@ -77,9 +77,19 @@ GuildHouseProff = 500000
 #
 GuildHouseSpirit = 100000
 
-# GuildHouseSpirit
+# GuildHouseThemenator
 #
-# Cost of Spirit Healer at the guildhouse graveyard .
+# Cost of Themenator at the guildhouse graveyard .
 # default = 100000 (10g)
 #
 GuildHouseZomble = 100000
+
+# GuildHouseBuyRank
+#
+# Minimum GuildRank able to make purchases in guild house
+# default = 0 (Guild Master)
+# GR_GUILDMASTER  = 0
+# GR_OFFICER      = 1
+# GR_VETERAN      = 2 ... etc
+#
+GuildHouseBuyRank = 1
