--- a/mod-individual-XP/CMakeLists.txt
+++ b/mod-individual-XP/CMakeLists.txt
@@ -4,6 +4,6 @@ AC_ADD_SCRIPT("${CMAKE_CURRENT_LIST_DIR}/src/Individual_XP.cpp")
 
 AC_ADD_SCRIPT_LOADER("Individual_XP" "${CMAKE_CURRENT_LIST_DIR}/src/loader.h")
 
-CU_ADD_HOOK(AFTER_WORLDSERVER_CMAKE "${CMAKE_CURRENT_LIST_DIR}/src/cmake/after_ws_install.cmake")
+AC_ADD_CONFIG_FILE("${CMAKE_CURRENT_LIST_DIR}/conf/mod_individualxp.conf.dist")
 
 message("-- Individual-XP CONFIGURED --")
