--- a/mod-premium-plus/conf/premium.conf.dist
+++ b/mod-premium-plus/conf/premium.conf.dist
@@ -56,6 +56,10 @@ Vendor = 1
 #                     0  - (Disabled)
 MailBox = 1
 
+#    Premium Services NPC Poszer
+#        Description: Allow Players Access ingame Mail
+#        Default:     1  - (Enabled)
+#                     0  - (Disabled)        
 Services = 1
 
 ##################################################################################################################
